--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -9,19 +9,44 @@ h1 {
 p {
   font-family: "Open Sans", sans-serif;
 }
+
 @media screen and (max-width: 600px) {
   #quote {
     font-family: "Roboto", sans-serif;
     font-size: 3.5vw;
   }
+  #textPic1 {
+    font-family: "Roboto", sans-serif;
+    font-size: 2.5vw;
+  }
 }
+
 @media screen and (min-width: 601px) {
   #quote {
     font-family: "Roboto", sans-serif;
 
     font-size: 2vw;
   }
+  #textPic1 {
+    font-family: "Roboto", sans-serif;
+
+    font-size: 1.5vw;
+  }
 }
+
+.blueText {
+  color: rgb(66, 133, 244);
+}
+.redText {
+  color: rgb(234, 67, 53);
+}
+.yellowText {
+  color: rgb(251, 188, 5);
+}
+.greenText {
+  color: rgb(52, 168, 83);
+}
+
 @keyframes fadeOut {
   0% {
     visibility: visible;
@@ -33,6 +58,20 @@ p {
   100% {
     opacity: 0;
     visibility: hidden;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -64,6 +103,11 @@ p {
   color: lightgrey;
 }
 
+div#endBox #introTextBox
+{
+  color: grey;
+}
+
 #logoBox {
   width: 500px;
   height: 281px;
@@ -72,82 +116,23 @@ p {
   padding: 0;
 }
 
-/* Homepage Blog Box */
-#blogBox {
-  position: relative;
-  margin: 0 auto;
-  margin-top: 10px;
-  width: 95%;
-  max-width: 1000px;
-  text-align: justify;
-  background-color: rgba(150, 150, 150, 0.3);
-  border-radius: 10px;
-  padding: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-#founderQuoteBox {
-  width: 30%;
-  margin-right: 4%;
-  margin-left: 2%;
-  float: right;
-  text-align: justify;
-}
-
-#founderQuote {
-  font-weight: bold;
-}
-
-#founderCitation {
-  font-style: italic;
-  text-align: right;
-}
-
-#homepageImgBox {
-  float: left;
-  width: 60%;
-  margin-left: 4%;
-}
-
-#homepageImg {
-  width: 100%;
-  max-width: 800px;
-}
-
-#puzzleBG {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(67, 67, 67);
-}
-
-#puzzleBox {
-  overflow: hidden;
-  width: 800px;
-  margin: 20px auto;
-}
-
-canvas {
-  float: left;
-}
-
-.puzzleSolution {
-  max-width: 200px;
-  float: right;
-}
-
 .invisible {
   visibility: hidden;
 }
 
-.controlPanelBG {
-  background-color: rgb(51, 51, 51);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
+#endBox
+{
+  max-width: 400px;
+  margin: 25% auto;
+
+  text-align: center;
+
+  visibility: visible;
+  opacity: 1;
+
+  animation-name: fadeIn;
+  animation-delay: 0s;
+  animation-duration: 5s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
 }
